Remove checkmarks from print statements

--- a/Welcome_AWTS_Bank.ipynb
+++ b/Welcome_AWTS_Bank.ipynb
@@ -49,7 +49,7 @@
     "        \"name\": name,\n",
     "        \"balance\": balance\n",
     "    }\n",
-    "    print(\"✅ Account created successfully\")\n",
+    "    print(\" Account created successfully\")\n",
     "\n",
     "def view_accounts():\n",
     "    if not accounts:                  \n",
@@ -66,7 +66,7 @@
     "        return\n",
     "    password = input(\"Choose Password: \") \n",
     "    users[username] = password            \n",
-    "    print(\"✅ Signup successful\")\n",
+    "    print(\" Signup successful\")\n",
     "\n",
     "def signin():\n",
     "    u = input(\"Username: \")              \n",
@@ -89,7 +89,7 @@
     "        return\n",
     "    amount = float(input(\"Deposit Amount: \"))  \n",
     "    info[\"balance\"] += amount                   \n",
-    "    print(\"✅ Deposit successful\")\n",
+    "    print(\" Deposit successful\")\n",
     "\n",
     "def withdraw(username):\n",
     "    acc, info = get_user_account(username)     \n",
@@ -98,10 +98,10 @@
     "        return\n",
     "    amount = float(input(\"Withdraw Amount: \")) \n",
     "    if amount > info[\"balance\"]:               \n",
-    "        print(\"❌ Insufficient balance\")\n",
+    "        print(\" Insufficient balance\")\n",
     "    else:\n",
     "        info[\"balance\"] -= amount             \n",
-    "        print(\"✅ Withdrawal successful\")\n",
+    "        print(\" Withdrawal successful\")\n",
     "\n",
     "def transfer(username):\n",
     "    send_acc, sender = get_user_account(username)  \n",
@@ -114,11 +114,11 @@
     "        return\n",
     "    amount = float(input(\"Amount to transfer: \"))  \n",
     "    if amount > sender[\"balance\"]:                 \n",
-    "        print(\"❌ Not enough balance\")\n",
+    "        print(\" Not enough balance\")\n",
     "        return\n",
     "    sender[\"balance\"] -= amount\n",
     "    accounts[rec_acc][\"balance\"] += amount\n",
-    "    print(\"✅ Transfer successful\")\n",
+    "    print(\" Transfer successful\")\n",
     "\n",
     "def view_account(username):\n",
     "    acc, info = get_user_account(username)  \n",
